@@ -537,6 +537,9 @@ BUG FIXES
     o	pdf(family="Japan") [and other CIDfonts] no longer seg.faults
 	when writing "western" text strings.
 
+    o	as.list applied to an environment now forces promises and returns
+	values.
+
 
 
 
